--- a/src/components/ChatRoomMessage/ChatRoomMessage.scss
+++ b/src/components/ChatRoomMessage/ChatRoomMessage.scss
@@ -38,12 +38,10 @@
 
 
 .ours {
-    right: 1%;
     justify-content: flex-end;
 }
 
 .users {
-    left: 1%;
     justify-content: flex-start;
 }
 
